todo-app/overlays/staging/patch-broadcaster-log-only.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  template:
    spec:
      containers:
        - name: broadcaster
