todo-app/overlays/staging/patch-route-refs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-route
spec:
  parentRefs:
    - name: stage-todo-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stage-todo-svc
          port: 2345
    - matches:
        - path:
            type: PathPrefix
            value: /todos
      backendRefs:
        - name: stage-todo-bc-svc
          port: 2345
